# COS344

./: index.html
HAPrep/: CMakeLists.txt  Makefile  blender_opengl_pipeline_guide.md
HAPrep/res/: Drone.glb
HAPrep/src/: main.cpp  model.cpp  model.h
HAPrepV2/: editor  face_cutting_explained.md  main.cpp  makefile
HAPrepV2/.claude/: settings.local.json
HAPrepV2/prac1/: Matrix.cpp
HAPrepV2/src/: Editor.cpp  Editor.hpp  Face.cpp  Face.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Tessellator.cpp  Tessellator.hpp  math3d.hpp
SemTest1/: ch1-intro.html  ch17-hardware.html  ch3-raster.html  ch4-raytracing.html  ch5-shading.html  ch7-transforms.html  ch9-rasterization.html  index.html  style.css
SemTest1/.claude/: settings.local.json
notes/: cos344_lecture_notes.html  cos344_math_reference.html  cos344_past_papers.html
prac2/: CoolLayout.json  README.md  SPECS.md  bonusFeatureChecklist.md  fragment.glsl  layout.h  layout.json  linefont.h  main  main.cpp  makefile  mat3.h  plan.md  preferredLayout.json  shapes.h  vertex.glsl
prac2/Prac1/: Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
prac2/src/: collision.h  game.h  input.h  scene.h  window.h
prac3/: CLAUDE.md  HUDFragment.glsl  HUDVertex.glsl  main  main.cpp  makefile
prac3/CLAUDE/: DECISIONS.md  LAYOUT.md  PROGRESS.md  REFERENCE.md  SHADERS.md  SHAPES.md
prac3/prac1/: Vector.cpp
prac4/: Geometry.cpp  Geometry.h  HUDFragment.glsl  HUDVertex.glsl  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Vector.cpp  Vector.h  fragment.glsl  main  main.cpp  makefile  math3d.hpp  vertex.glsl
(+35 files in other folders)
